[package]
name = "vreui"
version = "0.1.0"
edition = "2021"
authors = ["sceext <sceext@foxmail.com>"]
license = "MPL-2.0"
repository = "https://github.com/vreui/vre-ui"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
# 默认为 wayland 平台
default = ["wayland", "wr"]

# 使用 WebRender (OpenGL/ES) 渲染 (GNU/Linux, Android, Windows)
wr = []
# 使用浏览器 CSS+HTML 渲染 (布局) (web)
bc = []

# 组件代理模式
proxy = []

# wayland 平台 (GNU/Linux)
wayland = []
# Android 平台
android = []
# windows 平台
windows = []
# web 平台
web = []
